<resources>
    <string name="app_name">Eyes App</string>
    <string name="title_activity_maps">Eyes App</string>
    <string name="title_activity_login">Login</string>

    <!--Non-Textual-->
    <string name="eyedentify_icon">Eyedentify Icon</string>
    <string name="thumbnail_device">Device Thumbnail</string>
    <string name="thumbnail_user">User Thumbnail</string>

    <!-- Strings related to controllers -->
    <string name="login_controller">http://eyedentifyapps.com:8080/login/</string>
    <string name="web_socket">http://eyedentifyapps.com:8080/socket/websocket/</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="tenantId">TenantID</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_login">Unable to login</string>


    <string name="error_field_required">This field is required</string>
    <string name="title_activity_drawer">Eyes</string>
    <string name="no_network_connection">No Network Connection available</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>

    <string name="select_dates">Select Dates</string>
    <string name="vehicle">Vehicle</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="change_date">Change Date</string>
    <string name="get_reports">Get Reports</string>

    <string name="hint_date_box">YYYY-MM-DD</string>

    <!-- Strings related to reports table -->
    <string name="registration">Reg No.</string>
    <string name="startTime">Start time</string>
    <string name="endTime">End time</string>
    <string name="startLocation">Start Location</string>
    <string name="endLocation">End Location</string>
    <string name="duration">Duration(hours)</string>
    <string name="distance">Distance(km)</string>
    <string name="maxSpeed">Max Speed(Km/h)</string>
    <string name="hash"> # </string>
    <string name="location">location</string>

</resources>
