<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/select_dates"
            android:background="@drawable/back_rect"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <View
            android:id="@+id/l1"
            android:layout_width="fill_parent"
            android:layout_below="@+id/sd"
            android:layout_height="1dip"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="#aba0a3" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/vehicle"
            android:layout_below="@+id/l1"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/spinner"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />



        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/l1"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/e1"
            android:layout_toEndOf="@+id/tvDate"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/start_date"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText
            android:id="@+id/e1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/hint_date_box"
            android:paddingRight="20dp"
            android:layout_below="@+id/spinner"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:maxLength="10"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:inputType="date"/>

        <Button
            android:id="@+id/btnChangeDate1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/e1"
            android:layout_toEndOf="@+id/end"
            android:text="@string/change_date"/>


        <TextView
            android:id="@+id/end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/e2"
            android:layout_below="@+id/btnChangeDate1"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <EditText
            android:id="@+id/e2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/hint_date_box"
            android:layout_below="@+id/btnChangeDate1"
            android:paddingRight="20dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:maxLength="10"
            android:inputType="date"
            android:imeOptions="actionGo"
            android:imeActionLabel="@string/get_reports"
            android:imeActionId="@+id/btnsub"/>


        <Button
            android:id="@+id/btnChangeDate2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/e2"
            android:layout_below="@+id/e2"
            android:text="@string/change_date"/>

        <View
            android:id="@+id/l6"
            android:layout_width="fill_parent"
            android:layout_below="@+id/btnChangeDate2"
            android:layout_height="2dip"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="#aba0a3" />

        <Button
            android:id="@+id/btnsub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/btnChangeDate2"
            android:layout_below="@+id/l6"
            android:text="@string/get_reports"/>


        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>

</ScrollView>